RESOLVED FIXED 107566
[CSS Exclusions] Ignore ExclusionPolygon edges above minLogicalIntervalTop
https://bugs.webkit.org/show_bug.cgi?id=107566
Summary [CSS Exclusions] Ignore ExclusionPolygon edges above minLogicalIntervalTop
Hans Muller
Reported 2013-01-22 10:47:46 PST
ExclusionPolygon edges that lie above minLogicalIntervalTop can't contribute to the first fit location, so we can economize by ignoring them (don't create offset edges for them).
Attachments
Patch (5.57 KB, patch)
2013-01-25 09:50 PST, Hans Muller
no flags
Hans Muller
Comment 1 2013-01-25 09:50:15 PST
Dave Hyatt
Comment 2 2013-02-07 14:44:53 PST
Comment on attachment 184768 [details] Patch r=me
WebKit Review Bot
Comment 3 2013-02-07 15:22:04 PST
Comment on attachment 184768 [details] Patch Clearing flags on attachment: 184768 Committed r142187: <http://trac.webkit.org/changeset/142187>
WebKit Review Bot
Comment 4 2013-02-07 15:22:07 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.