[CSS Exclusions] Ignore ExclusionPolygon edges above minLogicalIntervalTop https://bugs.webkit.org/show_bug.cgi?id=107566

Patch by Hans Muller <hmuller@adobe.com> on 2013-02-07
Reviewed by David Hyatt.

Source/WebCore:

Improve ExclusionPolygon::firstIncludedIntervalLogicalTop() performance by only
creating offset edges for polygon edges that are below the horizontal minLogicalIntervalTop
line. In other words, don't bother creating offset edges that can't define the polygon's
first fit location.

Test: fast/exclusions/shape-inside/shape-inside-first-fit-004.html

* rendering/ExclusionPolygon.cpp:
(WebCore::ExclusionPolygon::firstIncludedIntervalLogicalTop): Don't create offset edges for polygon edges above minLogicalIntervalTop.

LayoutTests:

Added a simple polygonal shape-inside test where only a subset of the polygon edges
should contribute to each line's offset edges.

* fast/exclusions/shape-inside/shape-inside-first-fit-004-expected.html: Added.
* fast/exclusions/shape-inside/shape-inside-first-fit-004.html: Added.

Canonical link: https://commits.webkit.org/127432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142187 268f45cc-cd09-0410-ab3c-d52691b4dbfc